[gd_scene load_steps=2 format=3 uid="uid://clr0to0jc8x3s"]

[ext_resource type="Script" path="res://Scenes/Weapons/MagicWand.gd" id="1_crgft"]

[node name="MagicWand" type="Area2D"]
process_mode = 1
script = ExtResource("1_crgft")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
